; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m68k/apollo/extr_config.c_apollo_parse_bootinfo.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m68k/apollo/extr_config.c_apollo_parse_bootinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bi_record = type { i64*, i32 }

@apollo_model = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @apollo_parse_bootinfo(%struct.bi_record* %0) #0 {
  %2 = alloca %struct.bi_record*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  store %struct.bi_record* %0, %struct.bi_record** %2, align 8
  store i32 0, i32* %3, align 4
  %5 = load %struct.bi_record*, %struct.bi_record** %2, align 8
  %6 = getelementptr inbounds %struct.bi_record, %struct.bi_record* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  store i64* %7, i64** %4, align 8
  %8 = load %struct.bi_record*, %struct.bi_record** %2, align 8
  %9 = getelementptr inbounds %struct.bi_record, %struct.bi_record* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  switch i32 %10, label %14 [
    i32 128, label %11
  ]

11:                                               ; preds = %1
  %12 = load i64*, i64** %4, align 8
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* @apollo_model, align 8
  br label %15

14:                                               ; preds = %1
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %14, %11
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
